Animation Player (STRG+F11) crashes with TIFF 16bit RGBA #35143

Closed
opened 2013-04-29 13:25:11 +02:00 by Clemens Rudolph · 5 comments

%%%--- Operating System, Graphics card ---
Win 7 / 2x Geforce 580

- Blender version with error, and version that worked ---

SVN-56372 / Buildbot

- Short description of error ---

When you render an animation as a TIFF 16bit RGBA file and you want to watch it afterwards with STRG + F11 (don´t know how you call the player) the player crashes.
When you do the same with TIFF 16bit RGB or TIFF 8bit RGB or RGBA you see only transparent background and the frames are not changing.

%%%

%%%--- Operating System, Graphics card --- Win 7 / 2x Geforce 580 - Blender version with error, and version that worked --- SVN-56372 / Buildbot - Short description of error --- When you render an animation as a TIFF 16bit RGBA file and you want to watch it afterwards with STRG + F11 (don´t know how you call the player) the player crashes. When you do the same with TIFF 16bit RGB or TIFF 8bit RGB or RGBA you see only transparent background and the frames are not changing. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Cant redo this, 16 bit tiff's play fine on 64bit Linux, r56400,

  • What pixel size are you rendering at?
  • Does it crash immediately?
  • Does this problem happen for 16bit PNG's?%%%
%%%Cant redo this, 16 bit tiff's play fine on 64bit Linux, r56400, - What pixel size are you rendering at? - Does it crash immediately? - Does this problem happen for 16bit PNG's?%%%

%%%- What pixel size are you rendering at?
No change, 50% of 1920 x 1080
Tested now 100% of 1920 x 1080, same thing.

  • Does it crash immediately?
    Yes, the new player window opens, crash

  • Does this problem happen for 16bit PNG's?
    No, PNGs are fine.
    Just TIFF 16bit RGBA chrashes

All other TIFFs (16bit RGB, 8bit RGB / RGBA) no crash, but you just see alpha checkerboard
and NOT the rendered Image.

Attached small test-blend.

%%%

%%%- What pixel size are you rendering at? No change, 50% of 1920 x 1080 Tested now 100% of 1920 x 1080, same thing. - Does it crash immediately? Yes, the new player window opens, crash - Does this problem happen for 16bit PNG's? No, PNGs are fine. Just TIFF 16bit RGBA chrashes All other TIFFs (16bit RGB, 8bit RGB / RGBA) no crash, but you just see alpha checkerboard and NOT the rendered Image. Attached small test-blend. %%%
Member

%%%I noticed the .tif extension is being returned by ffmpeg as a valid movie. Easy fix, although this fmpeg check should be revised one day.
Thanks for the report!

(On osx it didnt crash, but also didnt work :)%%%

%%%I noticed the .tif extension is being returned by ffmpeg as a valid movie. Easy fix, although this fmpeg check should be revised one day. Thanks for the report! (On osx it didnt crash, but also didnt work :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35143
No description provided.